# AUnited.alliance-data-notation

./: .space.kts  README.md  automation.space.kts  settings.gradle.kts
.Net/: AUnited.ADN.dotNet.sln
.Net/Production/: AUnited.ADN.dotNET.Production.csproj  Walkable.cs
.Net/Production/API/: InvalidReadException.cs  InvalidTokenException.cs  InvalidTypeException.cs  NotationObject.cs
.Net/Production/API/Data/: Datapoint.cs  Dataset.cs
.Net/Production/API/Debugging/: DataOverview.cs  SyntaxTree.cs
.Net/Production/Data/: Arr.cs  DataType.cs  DataTypeMapper.cs  Literal.cs  Node.cs  Struc.cs
.Net/Production/IO/: NotationFile.cs
.Net/Production/Lexical/: Lexer.cs  Parser.cs
.Net/Production/Parsing/: Lexer.cs
.Net/Production/Semantic/: Token.cs  TokenIdentifier.cs  TokenLiteral.cs  TokenStructural.cs  TokenType.cs
.Net/Testing/: UnitTest1.cs
.Net/Testing/Data/: DatasetPrint.cs
JVM/: build.gradle.kts  settings.gradle.kts
JVM/gradle/wrapper/: gradle-wrapper.properties
JVM/src/main/java/: FullTest.java  Inner.java  Outer.java  iInterface.java
JVM/src/test/resources/: e2e.adn
Native/: Cargo.toml
Native/src/: api_end_to_end_test.rs  io.rs  lib.rs  walkable.rs
Native/src/data/: datapoint.rs  dataset.rs  datatype.rs  element.rs  element_array.rs  element_bool.rs  element_f32.rs  element_f64.rs  element_i16.rs  element_i32.rs  element_i64.rs  element_i8.rs  element_str.rs  element_struct.rs  notation_format.rs
Native/src/semantic/: lexer.rs  token_kind.rs
Native/src/syntactic/: parser.rs
scripts/: build.py  clean.py
(+61 files in other folders)
