[package]
name = "alliance-data-notation"
description = "A strongly, statically typed, JSON like data notation. Provides type inferration for most common types for convenience."
repository = ""
version = "0.0.1-alpha"
authors = ["Raphael Mateus das Neves <NER.Alliance@gmail.com>"]
edition = "2021"
license = "LGPLv3"

publish = false